--- a/hw0-vvv/pom.xml
+++ b/hw0-vvv/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.cmu.lti.11791.f13.hw0</groupId>
   <artifactId>hw0-vvv</artifactId>
-  <version>0.0.7-SNAPSHOT</version>
+  <version>0.0.7</version>
   <scm>
   	<developerConnection>scm:git:git@github.com:vvvemuri1/hw0-vvv.git</developerConnection>
   	<connection>scm:git:git@github.com:vvvemuri1/hw0-vvv.git</connection>
