Updating pom.xml

--- a/hw0-vvv/release.properties
+++ b/hw0-vvv/release.properties
@@ -1,10 +1,16 @@
 #release configuration
-#Sun Sep 01 21:35:49 EDT 2013
-preparationGoals=clean verify
-pushChanges=true
-exec.snapshotReleasePluginAllowed=false
-scm.commentPrefix=[maven-release-plugin] 
-remoteTagging=true
-completedPhase=check-poms
+#Sun Sep 01 22:34:20 EDT 2013
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.scm.edu.cmu.lti.11791.f13.hw0\:hw0-vvv.tag=HEAD
+scm.tag=hw0-vvv-0.0.7
+pushChanges=true
 scm.url=scm\:git\:git@github.com\:vvvemuri1/hw0-vvv.git
+preparationGoals=clean verify
+project.dev.edu.cmu.lti.11791.f13.hw0\:hw0-vvv=0.0.8-SNAPSHOT
+remoteTagging=true
+scm.commentPrefix=[maven-release-plugin] 
+project.scm.edu.cmu.lti.11791.f13.hw0\:hw0-vvv.developerConnection=scm\:git\:git@github.com\:vvvemuri1/hw0-vvv.git
+project.scm.edu.cmu.lti.11791.f13.hw0\:hw0-vvv.connection=scm\:git\:git@github.com\:vvvemuri1/hw0-vvv.git
+project.rel.edu.cmu.lti.11791.f13.hw0\:hw0-vvv=0.0.7
+exec.snapshotReleasePluginAllowed=false
+completedPhase=run-preparation-goals
